# yamine

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  local-release
.github/workflows/: mean_bean_deploy.yml
src/: app.rs  main.rs
