[package]
edition = "2018"
name = "yamine"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
color-eyre = "0.6"
eyre = "0.6"

# logging
env_logger = "0.9"
log = "0.4"

# cli
structopt = "0.3"

# file system
ignore = "0.4"

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"

# terminal
colored = "2.0"

# utils
indoc = "1.0"
itertools = "0.10"
