[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2018"
name = "yamine"
license = "Apache-2.0"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
color-eyre = "0.6"
eyre = "0.6"

# logging
clap = { version = "4.4", features = ["cargo", "derive"] }
pretty_env_logger = "0.5"
log = "0.4"

# file system
ignore = "0.4"

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"

# terminal
colored = "2.0"
anstyle = "1.0.3"

# utils
indoc = "2.0"
itertools = "0.11"
